# HiQ_Code_Test

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Car.cpp  Car.h  Simulator.cpp  Simulator.h  TUI.cpp  TUI.h  test.cpp  test.h
